--- a/blog.html
+++ b/blog.html
@@ -40,17 +40,17 @@
 
     <!-- MAIN SECTION -->
     <main>
-        <div class="wrapper clearfix">
+        <div class="main wrapper clearfix">
 
             <div class="aside">
-                <div class="aside__about">
-                    <img src="assets/blog-image-2.jpg" alt="">
+                <div class="aside__section">
+                    <img class="aside__section--img"src="assets/blog-image-2.jpg" alt="">
                     <h4>About Harper</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae dicta, itaque ea fugiat placeat
                     repellendus labore laborum magni non sed omnis aliquam. <a href="#">Find out more.</a></p>
                 </div>
             
-                <div class="aside__recent-posts">
+                <div class="aside__section">
                     <h4>Recent Posts</h4>
                     <ul>
                         <li>
@@ -70,34 +70,43 @@
             </div>
 
             <div class="main-blog">
-                <div class="main-blog__section--blue">
+                <div class="main-blog__section blue">
                     <h4>My favourite travel destinations</h4>
                     <p>Monday October 8th 2018, by Harper</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto mollitia explicabo ipsam voluptatum doloremque sint tenetur aspernatur, dolor, neque quaerat expedita magni provident autem fuga eveniet odio nihil recusandae voluptas, tempore voluptatem sed ut repudiandae! Neque ex cum, consequuntur sequi nulla inventore quam cupiditate magnam saepe porro, sed accusantium quos? Autem consequatur sapiente maxime obcaecati id! Nam rem atque est incidunt possimus ullam, adipisci consequuntur ex iure tempora praesentium! Sit odio eius deserunt cumque placeat, dolore distinctio adipisci incidunt necessitatibus eligendi similique quia quidem! Dicta, distinctio quod officia maiores voluptatum suscipit eligendi. </p>
-                    <p>Totam laborum, harum eaque porro non voluptas dolorum est quos, voluptatibus architecto ipsam perferendis omnis laboriosam nisi. Earum molestiae eligendi ex sed eveniet sequi, iste ipsam neque totam optio sint inventore magnam laudantium obcaecati assumenda autem asperiores nostrum placeat alias atque impedit mollitia. Eum accusamus harum nam eius veniam enim similique aliquam voluptatum dicta hic repudiandae vel, cum doloremque? Esse rem modi cupiditate suscipit nam explicabo temporibus eius molestias sunt, quisquam, corporis quod. Earum rem, sequi dignissimos laudantium cum dicta eos animi perspiciatis consequuntur inventore veniam quos. Quae totam asperiores veritatis pariatur. Dolor ipsam laboriosam quas vel dolorum eum aspernatur possimus dolore placeat, aut ea labore velit amet saepe odio, nihil expedita! Architecto animi pariatur eius sapiente voluptate reprehenderit dolores eveniet obcaecati id unde, a sed accusantium illum sunt voluptatem autem placeat nesciunt aperiam beatae optio. Rerum ratione voluptates vel molestiae saepe reprehenderit, labore distinctio quaerat nulla recusandae iusto error odio veritatis sint, quidem nobis minus perspiciatis soluta quam eius repellendus porro aperiam?</p><p>Magnam repellendus modi maxime. Molestiae, perspiciatis beatae. Id ab temporibus explicabo illum suscipit! Magni quia placeat reprehenderit. Odio eum molestias provident! Repudiandae aut, consequatur atque a similique optio distinctio minima blanditiis doloremque, ea unde dolor saepe repellat nulla architecto? Cumque repellat asperiores delectus. Dicta, ex facilis sit nostrum minima dolores sed eius neque cupiditate sunt nam suscipit voluptates non. Dolorum architecto suscipit ipsam vitae quod. </p><p>Quidem eius cupiditate minima deleniti ratione eum! Dolore iusto labore vel tempora maiores ex cupiditate nesciunt molestias et provident doloremque, sint vitae voluptate, saepe molestiae dicta blanditiis. Maxime sequi, porro omnis eaque, labore eligendi facilis doloremque ratione, at quos in placeat odio ipsam dignissimos. Accusamus similique perferendis, tempore error velit dolorem ut cupiditate molestiae animi inventore obcaecati magnam eaque provident odit laboriosam porro expedita et quam ducimus sit laborum fuga doloribus praesentium? Autem sapiente quam quae molestiae nobis error porro nesciunt, provident, magnam neque sed eum quis alias, reiciendis nihil facilis consectetur libero explicabo a ad ratione possimus! Architecto soluta expedita asperiores quisquam, accusamus accusantium aperiam in mollitia nisi ipsum quaerat quod! Provident alias, quaerat totam ut delectus fugiat magnam quia eaque ducimus aspernatur animi enim obcaecati.</p><p>Dolor sequi, culpa fugiat aut, tenetur fuga cupiditate impedit facere officiis provident voluptates molestias esse vel laudantium, quaerat iste. Esse sequi qui quasi inventore. Vitae et unde numquam veniam culpa voluptate consectetur similique. Blanditiis nulla praesentium atque ipsam, perferendis temporibus minima necessitatibus iusto aliquam quidem non in autem. Quam officia, quo cumque eius necessitatibus, ullam saepe, recusandae voluptate atque natus eligendi rerum? Quidem doloribus consequuntur blanditiis itaque? Tempora facere in blanditiis id dolorem dicta at. Facilis quia voluptate provident cumque nam laborum soluta ipsam, id repellendus reprehenderit odit quasi fuga debitis dolore, molestias fugit quisquam odio accusamus blanditiis necessitatibus tempore amet, sapiente ad. Vel eum veritatis animi, quidem nobis consequuntur veniam aspernatur nulla, molestias rerum architecto expedita voluptates accusamus esse itaque quibusdam deserunt sequi perspiciatis aliquid?</p><p>Nostrum quasi quidem repellendus esse quam, voluptate quibusdam dolorem temporibus sed quia animi et odio ducimus inventore ab at, ad alias similique vitae? Illum molestias veniam quia debitis, accusamus id ex necessitatibus magnam nemo eos voluptatum velit alias eligendi nam quae libero mollitia tenetur maxime, qui quos similique inventore, perferendis maiores harum. Labore nemo consequuntur nihil neque omnis magni odit eius laboriosam, minus tempore temporibus voluptatibus voluptate expedita, quidem ratione. Ex at minima laudantium possimus! Natus quis tempore veniam a dignissimos minus alias, est expedita iure ea labore incidunt corrupti nobis sapiente possimus hic cumque, illum eveniet repudiandae amet dolorum commodi, cupiditate temporibus?</p><p>Iure voluptate adipisci illo tempora eligendi veniam natus inventore quam maxime veritatis, laboriosam soluta minima pariatur animi velit voluptatibus accusamus ratione dolor a possimus consequatur error itaque aliquam repellat! Aliquid reiciendis, nemo aperiam maiores illo odit voluptatum quaerat minus magni sapiente animi perferendis iusto quas voluptatem ratione? Amet obcaecati odit, omnis labore id velit, architecto autem harum nulla doloremque quaerat iusto, ipsum voluptatum assumenda et commodi facilis. Ea laboriosam magni maiores dignissimos, esse aliquam repudiandae sapiente iure culpa ipsum debitis, maxime veritatis soluta quis natus ipsam facere eos corporis blanditiis sequi minus, molestias possimus provident. Natus velit amet cum eaque, quis veniam libero sapiente nemo iusto a repellendus repudiandae facilis qui nulla temporibus numquam odio dolorum perspiciatis quod illum sequi officia facere.</p><p>Officia voluptatibus ipsum consequuntur obcaecati cum debitis, saepe in illum repellat, placeat laborum? Asperiores non molestiae eveniet nam laudantium, adipisci aliquid maxime, distinctio sequi quidem temporibus. Sit modi possimus eligendi vel! Amet corporis praesentium excepturi, aspernatur rerum ex eaque animi beatae sed sint perspiciatis ad ratione quo dignissimos sapiente neque sunt alias dolore, ea magni, iusto ipsum reprehenderit esse? In, eos dolor harum quam qui vero inventore dicta quo provident libero sunt sed. Laboriosam modi veritatis quos, impedit ullam vel blanditiis atque!</p><p>Dolorem tempora at beatae reiciendis architecto temporibus distinctio rerum soluta mollitia, optio voluptate dicta consequuntur adipisci autem accusantium vitae fugiat omnis cum. Ex rem dicta nisi tempora ipsa! Error quisquam sapiente eum amet cumque minus doloremque, porro nihil sunt exercitationem inventore ex, libero perferendis consequatur, pariatur consectetur labore quia eius laboriosam. Ducimus asperiores voluptate mollitia sunt ad, cupiditate maxime laboriosam molestiae itaque ex a amet sapiente consequuntur dolorum laudantium ipsa ratione vel est blanditiis labore soluta doloribus accusamus. Officia voluptatibus aspernatur optio sapiente doloremque et dolorem magni minima voluptas, omnis enim quaerat id reprehenderit veritatis. Ea, debitis pariatur accusamus quisquam saepe quod beatae, in ex, officiis culpa eligendi est modi minus unde velit reiciendis corporis natus nihil atque quas? Dolorum.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto mollitia explicabo ipsam voluptatum doloremque sint tenetur aspernatur, dolor, neque quaerat expedita magni provident autem fuga eveniet odio nihil recusandae voluptas, tempore voluptatem sed ut repudiandae! Neque ex cum, consequuntur sequi nulla inventore quam cupiditate magnam saepe porro, sed accusantium quos? Autem consequatur sapiente maxime obcaecati id! Nam rem atque est incidunt possimus ullam, adipisci consequuntur ex iure tempora praesentium! Sit odio eius deserunt cumque placeat, dolore distinctio adipisci incidunt necessitatibus eligendi similique quia quidem! Dicta, distinctio quod officia maiores voluptatum suscipit eligendi. </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis atque quia incidunt dolor qui veniam nemo ipsam ad error itaque tenetur, distinctio quis a maxime quisquam excepturi. Aliquid, recusandae optio! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis iste officia, debitis voluptatem delectus id molestias reprehenderit laudantium minus eius sunt consectetur sequi eligendi corrupti ipsa. Ex distinctio nobis repellat?</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores at illum adipisci recusandae porro vero sit corrupti hic assumenda, ab ex voluptate quod, non omnis mollitia laboriosam numquam soluta iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quia exercitationem omnis dolorum, voluptatem odit voluptatibus atque ea numquam ipsum quo nisi repellendus labore non eligendi veniam molestiae enim harum.</p>
                 </div>
             
 
-                <div class="main-blog__section">
-                    <img src="assets/blog-image-3.jpg" alt="">
-                    <p>Tuesday October 9th, 2018 by Maggie</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore a nam, recusandae nesciunt aperiam ducimus iure eligendi quod qui et quibusdam sapiente ipsam itaque? Dignissimos pariatur velit voluptatibus fugit sunt.</p>
+                <div class="main-blog__section--flex">
+                    <div class="main-blog__section--img">
+                        <img src="assets/blog-image-3.jpg" alt="">
+                    </div>
+                    <div class="main-blog__section--text">
+                        <p>Tuesday October 9th, 2018 by Maggie</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore a nam, recusandae nesciunt aperiam ducimus iure eligendi quod qui et quibusdam sapiente ipsam itaque? Dignissimos pariatur velit voluptatibus fugit sunt.</p>
+                    </div>
                 </div>
 
-                <div class="main-blog__section--blue">
-                    <img src="assets/blog-image-4.jpg" alt="">
-                    <p>Wednesday October 10th, 2018 by Daisy</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum sapiente, eaque laudantium mollitia dolores qui omnis nesciunt consequatur, harum, soluta libero accusantium consequuntur. Deserunt reiciendis iste quasi officiis minima accusantium!</p>
+                <div class="main-blog__section--flex blue">
+                    <div class="main-blog__section--img">
+                        <img src="assets/blog-image-4.jpg" alt="">
+                    </div>
+
+                    <div class="main-blog__section--text">
+                        <p>Wednesday October 10th, 2018 by Daisy</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum sapiente, eaque laudantium mollitia dolores qui omnis nesciunt consequatur, harum, soluta libero accusantium consequuntur. Deserunt reiciendis iste quasi officiis minima accusantium!</p>
+                    </div>
                 </div>
 
-                <form action="sendEmail.php" method="POST" name="blogForm">
-                    <input type="text" name="name" required="true" placeholder="Name">
-                    <input type="text" name="email" placeholder="Email Address">
-                    <input type="text" name="comment" required="true" placeholder="Comment">
-                    <input type="submit" name="submit" value="Post Comment">
-                </form>
+                <!-- <div class="main-blog__form"> -->
+                    <form action="sendEmail.php" class="main-blog__form" method="POST" name="blogForm">
+                        <input type="text" class="main-blog__name" name="name" required="true" placeholder="Name">
+                        <input type="text"  class="main-blog__email" name="email" placeholder="Email Address">
+                        <input type="text" class="main-blog__comment" name="comment" required="true" placeholder="Comment">
+                        <input type="submit" class="main-blog__button" name="submit" value="Post Comment">
+                    </form>
+                <!-- </div> -->
             </div>
-
         </div>
     </main>
 </body>
