--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                     <a href="#">Home</a>
                 </li>
                 <li class="header__links">
-                    <a href="#">About</a>
+                    <a href="#scroll-about">About</a>
                 </li>
                 <li class="header__links">
-                    <a class="header__links--title" href="#">Harper</a>
+                    <a class="header__links--title" href="index.html">Harper</a>
                 </li>
                 <li class="header__links">
                     <a href="blog.html">Blog</a>
                 </li>
                 <li class="header__links">
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
@@ -47,11 +47,11 @@
    
     <main>
         <!-- ABOUT SECTION -->
-        <section class="harper1 clearfix">
+        <section class="harper1 clearfix" id="scroll-about">
                 <div class="about">
                     <h2 class="about__title">Who's Harper?</h2>
                     <p class="about__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quis aliquam ex, praesentium tempora ipsum iure id et nesciunt doloribus perspiciatis repellat laudantium, vel quidem aliquid.</p>
-                    <a class="button" href="#">Find out more</a>
+                    <a class="button" href="#scroll-journey">Find out more</a>
                 </div>
         </section>
 
@@ -112,7 +112,7 @@
         </section>
 
         <!-- QUADRANT SECTION --> 
-        <section>
+        <section id="scroll-travels">
 
             <div class="first-container">
 
@@ -144,7 +144,7 @@
         </section>
     
         <!-- HARPER'S JOURNEY -->
-        <section class="harper2">
+        <section class="harper2" id="scroll-journey">
             <div class="wrapper journey">
                 <div class="journey-img">
                     <img class="journey-img__img" src="assets/home-image-5.jpg" alt="">
@@ -153,7 +153,7 @@
                 <div class="journey-content">
                     <h2 class="journey-content__title">Harper's Journey</h2>
                     <p class="journey-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, nobis laboriosam aspernatur accusamus optio tenetur delectus rem nostrum eum laudantium itaque magni voluptatum expedita repudiandae a cupiditate impedit quisquam quibusdam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, alias a, totam dolorum aperiam quasi laboriosam blanditiis placeat vel labore, aut eum nisi culpa deserunt vitae perferendis reiciendis? Veniam, perferendis!</p>
-                    <a class="button" href="#">Find out more</a>
+                    <a class="button" href="#scroll-travels">Find out more</a>
                 </div>
             </div>
         </section>
