responsive blog with sticky aside

--- a/blog.html
+++ b/blog.html
@@ -43,14 +43,14 @@
         <div class="main wrapper clearfix">
 
             <div class="aside" id="scroll-about">
-                <div class="aside__section">
+                <div class="aside__section sticky">
                     <img class="aside__section--img"src="assets/blog-image-2.jpg" alt="">
                     <h4>About Harper</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae dicta, itaque ea fugiat placeat
                     repellendus labore laborum magni non sed omnis aliquam. <a href="#">Find out more.</a></p>
                 </div>
             
-                <div class="aside__section">
+                <div class="aside__section sticky">
                     <h4>Recent Posts</h4>
                     <ul>
                         <li>
@@ -73,7 +73,9 @@
                 <div class="main-blog__section blue">
                     <h4>My favourite travel destinations</h4>
                     <p>Monday October 8th 2018, by Harper</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto mollitia explicabo ipsam voluptatum doloremque sint tenetur aspernatur, dolor, neque quaerat expedita magni provident autem fuga eveniet odio nihil recusandae voluptas, tempore voluptatem sed ut repudiandae! Neque ex cum, consequuntur sequi nulla inventore quam cupiditate magnam saepe porro, sed accusantium quos? Autem consequatur sapiente maxime obcaecati id! Nam rem atque est incidunt possimus ullam, adipisci consequuntur ex iure tempora praesentium! Sit odio eius deserunt cumque placeat, dolore distinctio adipisci incidunt necessitatibus eligendi similique quia quidem! Dicta, distinctio quod officia maiores voluptatum suscipit eligendi. </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis atque quia incidunt dolor qui veniam nemo ipsam ad error itaque tenetur, distinctio quis a maxime quisquam excepturi. Aliquid, recusandae optio! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis iste officia, debitis voluptatem delectus id molestias reprehenderit laudantium minus eius sunt consectetur sequi eligendi corrupti ipsa. Ex distinctio nobis repellat?</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores at illum adipisci recusandae porro vero sit corrupti hic assumenda, ab ex voluptate quod, non omnis mollitia laboriosam numquam soluta iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quia exercitationem omnis dolorum, voluptatem odit voluptatibus atque ea numquam ipsum quo nisi repellendus labore non eligendi veniam molestiae enim harum.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto mollitia explicabo ipsam voluptatum doloremque sint tenetur aspernatur, dolor, neque quaerat expedita magni provident autem fuga eveniet odio nihil recusandae voluptas, tempore voluptatem sed ut repudiandae! Neque ex cum, consequuntur sequi nulla inventore quam cupiditate magnam saepe porro, sed accusantium quos? Autem consequatur sapiente maxime obcaecati id! Nam rem atque est incidunt possimus ullam, adipisci consequuntur ex iure tempora praesentium! Sit odio eius deserunt cumque placeat, dolore distinctio adipisci incidunt necessitatibus eligendi similique quia quidem! Dicta, distinctio quod officia maiores voluptatum suscipit eligendi. </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis atque quia incidunt dolor qui veniam nemo ipsam ad error itaque tenetur, distinctio quis a maxime quisquam excepturi. Aliquid, recusandae optio! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis iste officia, debitis voluptatem delectus id molestias reprehenderit laudantium minus eius sunt consectetur sequi eligendi corrupti ipsa. Ex distinctio nobis repellat?</p><span id="dots">...</span><span id="more"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Maiores at illum adipisci recusandae porro vero sit corrupti hic assumenda, ab ex voluptate quod, non omnis mollitia laboriosam numquam soluta iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quia exercitationem omnis dolorum, voluptatem odit voluptatibus atque ea numquam ipsum quo nisi repellendus labore non eligendi veniam molestiae enim harum.</p></span>
+                    <button onclick="myFunction()" id="myBtn">Read more</button>
                 </div>
             
 
@@ -115,5 +117,24 @@
             <p class="footer-section__text">Copyright 2018 HackerYou</p>
         </div>
     </footer>
+
+    <!-- JQUERY -->
+    <script>
+        function myFunction() {
+            var dots = document.getElementById("dots");
+            var moreText = document.getElementById("more");
+            var btnText = document.getElementById("myBtn");
+
+            if (dots.style.display === "none") {
+                dots.style.display = "inline";
+                btnText.innerHTML = "Read more";
+                moreText.style.display = "none";
+            } else {
+                dots.style.display = "none";
+                btnText.innerHTML = "Read less";
+                moreText.style.display = "inline";
+            }
+        }
+    </script>
 </body>
 </html>
