--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
                     <a href="#scroll-about">About</a>
                 </li>
                 <li class="header__links">
-                    <a class="header__links--title" href="index.html">Harper</a>
+                    <a class="header__links title" href="index.html">Harper</a>
                 </li>
                 <li class="header__links">
                     <a href="blog.html">Blog</a>
@@ -73,7 +73,7 @@
                 <div class="main-blog__section blue">
                     <h4>My favourite travel destinations</h4>
                     <p>Monday October 8th 2018, by Harper</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto mollitia explicabo ipsam voluptatum doloremque sint tenetur aspernatur, dolor, neque quaerat expedita magni provident autem fuga eveniet odio nihil recusandae voluptas, tempore voluptatem sed ut repudiandae! Neque ex cum, consequuntur sequi nulla inventore quam cupiditate magnam saepe porro, sed accusantium quos? Autem consequatur sapiente maxime obcaecati id! Nam rem atque est incidunt possimus ullam, adipisci consequuntur ex iure tempora praesentium! Sit odio eius deserunt cumque placeat, dolore distinctio adipisci incidunt necessitatibus eligendi similique quia quidem! Dicta, distinctio quod officia maiores voluptatum suscipit eligendi. </p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis atque quia incidunt dolor qui veniam nemo ipsam ad error itaque tenetur, distinctio quis a maxime quisquam excepturi. Aliquid, recusandae optio! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis iste officia, debitis voluptatem delectus id molestias reprehenderit laudantium minus eius sunt consectetur sequi eligendi corrupti ipsa. Ex distinctio nobis repellat?</p><span id="dots">...</span><span id="more"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto mollitia explicabo ipsam voluptatum doloremque sint tenetur aspernatur, dolor, neque quaerat expedita magni provident autem fuga eveniet odio nihil recusandae voluptas, tempore voluptatem sed ut repudiandae! Neque ex cum, consequuntur sequi nulla inventore quam cupiditate magnam saepe porro, sed accusantium quos? Autem consequatur sapiente maxime obcaecati id! Nam rem atque est incidunt possimus ullam, adipisci consequuntur ex iure tempora praesentium! Sit odio eius deserunt cumque placeat, dolore distinctio adipisci incidunt necessitatibus eligendi similique quia quidem! Dicta, distinctio quod officia maiores voluptatum suscipit eligendi. </p><span id="dots">...</span><span id="more"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis atque quia incidunt dolor qui veniam nemo ipsam ad error itaque tenetur, distinctio quis a maxime quisquam excepturi. Aliquid, recusandae optio! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis iste officia, debitis voluptatem delectus id molestias reprehenderit laudantium minus eius sunt consectetur sequi eligendi corrupti ipsa. Ex distinctio nobis repellat?</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Maiores at illum adipisci recusandae porro vero sit corrupti hic assumenda, ab ex voluptate quod, non omnis mollitia laboriosam numquam soluta iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quia exercitationem omnis dolorum, voluptatem odit voluptatibus atque ea numquam ipsum quo nisi repellendus labore non eligendi veniam molestiae enim harum.</p></span>
                     <button onclick="myFunction()" id="myBtn">Read more</button>
                 </div>
@@ -104,7 +104,8 @@
                 <form action="sendEmail.php" class="main-blog__form" method="POST" name="blogForm">
                     <input type="text" class="main-blog__name" name="name" required="true" placeholder="Name">
                     <input type="text"  class="main-blog__email" name="email" placeholder="Email Address">
-                    <input type="text" class="main-blog__comment" name="comment" required="true" placeholder="Comment">
+                    <!-- <input type="text" class="main-blog__comment" name="comment" required="true" placeholder="Comment"> -->
+                    <textarea name="comment" class="main-blog__comment" placeholder="Message"></textarea>
                     <input type="submit" class="main-blog__button" name="submit" value="Post Comment">
                 </form>
             </div>
