--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#scroll-about">About</a>
                 </li>
                 <li class="header__links">
-                    <a class="header__links--title" href="index.html">Harper</a>
+                    <a class="header__links title" href="index.html">Harper</a>
                 </li>
                 <li class="header__links">
                     <a href="blog.html">Blog</a>
@@ -153,7 +153,7 @@
                 <div class="journey-content">
                     <h2 class="journey-content__title">Harper's Journey</h2>
                     <p class="journey-content__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, nobis laboriosam aspernatur accusamus optio tenetur delectus rem nostrum eum laudantium itaque magni voluptatum expedita repudiandae a cupiditate impedit quisquam quibusdam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, alias a, totam dolorum aperiam quasi laboriosam blanditiis placeat vel labore, aut eum nisi culpa deserunt vitae perferendis reiciendis? Veniam, perferendis!</p>
-                    <a class="button" href="">Find out more</a>
+                    <a class="button" href="blog.html">Find out more</a>
                 </div>
             </div>
         </section>
